--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,4 @@
-# Dependencies
 node_modules/
-
-# Environment variables
 .env
-
-# OS files
 .DS_Store
-
-# Logs
-logs
-*.log
-npm-debug.log*
-
-# Runtime data
-pids
-*.pid
-*.seed
-
-# Directory for instrumented libs
-lib-cov
-
-# Coverage directory
-coverage
-
-# Build output
-dist
+npm-debug.log
