--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
   "name": "tcm-system",
   "version": "1.0.0",
-  "description": "Traditional Chinese Medicine Management System",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
+    "cors": "^2.8.5"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": "18.x"
   }
 }
