--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,4 +1,3 @@
 option_settings:
-  aws:elasticbeanstalk:container:nodejs:
-    NodeCommand: "npm start"
+  aws:elasticbeanstalk:nodejs:
     NodeVersion: 18.x
