--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,3 +1,3 @@
 option_settings:
-  aws:elasticbeanstalk:nodejs:
-    NodeVersion: 18.x
+  aws:elasticbeanstalk:container:nodejs: 
+    NodeCommand: "npm start"
